devops_short_course/k8s_folder/k8s_services/k8s_ingress/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deploy
spec:
 replicas: 2
 selector:
   matchLabels:
     app: nginx-app
 template:
   metadata:
     labels:
       app: nginx-app
   spec:
     containers:
       - name: nginx-cont
         image: nginx:latest
         ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-svc
spec:
 type: ClusterIP
 selector:
   app: nginx-app
 ports:
   - port: 80
     targetPort: 80
