devops_short_course/k8s_folder/k8s_services/k8s_ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "argocd-clusterissuer"
    kubernetes.io/ingressClass: "nginx"  # Changed from `ingressClass` to `ingress.class`
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: argocd.sen-pai.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argocd.sen-pai.live
      secretName: argocd-secret  # This is used by cert-manager to create a TLS secret
